# assignment

./: Dockerfile  Dockerrun.aws.json  README.md  pyproject.toml
.github/workflows/: push.yml
app/: .env.template  main.py
app/core/: config.py
app/server/: routes.py
app/server/endpoints/: campaign.py
app/server/templates/: campaign.html
app/services/campaign/: banner_chooser.py  campaign_data.py  constants.py  data_importer.py
app/services/static_files/: banner_image.py  csv_reader.py
app/services/templates/: template.py
app/tests/: utils.py
app/tests/services/: test_campaign.py
app/utils/: read_csv.py  time.py
scripts/: locustfile.py
